<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SumerianApp</string>
    <string name="about">About</string>
    <string name="fontsize">Font size:</string>
    <string name="fontcolor">Font color:</string>
    <string name="convert">Converter</string>
    <string name="aboutbtn">About</string>
    <string name="sign_viewer">Sign viewer</string>
    <string name="exit">Exit</string>
    <string name="contact">Visit dev page</string>
    <string name="search">Search</string>
    <string name="dicthint">Write a word</string>
    <string name="back">Back</string>
    <string name="mainhint">Enter your text here</string>
    <string name="sumcon">Sumerian Converter</string>
    <string name="convertbtn">Convert</string>
    <string name="convhint">Enter text here</string>
    <string name="copy">Copy</string>
    <string name="speak">Speak</string>
    <string name="info">Info</string>
    <string name="dictionary">Dictionary</string>
    <string name="loading">Loading..</string>
    <string name="proverbs">Proverbs</string>
    <string name="next">Next</string>
    <string name="signs_list">Signs list</string>
    <string name="kings_list">Kings list</string>

    <string name="faild_searching">Error while searching..</string>
    <string name="dict_no_results">No results found.</string>
    <string name="dict_no_json">Error loading the data.</string>
    <string name="sum_word">Sumerian: </string>
    <string name="sum_key">Sumerian key: </string>
    <string name="eng_word">Meaning: </string>
    <string name="eng_key">Meaning key: </string>
    <string name="arabic_word">Arabic meaning: </string>
    <string name="arabic_key">Arabic meaning key: </string>
    <string name="arabic_speak">Arabic readable form: </string>
    <string name="dict_source">Results source: </string>
    <string name="akkadian">Akkadian: </string>
    <string name="timeline">Dominations</string>
    <string name="uruk">URUK</string>
    <string name="proto_dynastic">Proto-Dynastic</string>
    <string name="akkadian_empire">Akkadian Empire</string>
    <string name="guti">Guti</string>
    <string name="sru3">Sumerian Renaissance UR III</string>
    <string name="ak">Amorite Kingdoms</string>
    <string name="pbe">Paleo-Babylonian Empire</string>
    <string name="cd">Cassite Dynasty</string>
    <string name="he">Hittite Empire</string>
    <string name="ae">Assyrian Empire</string>
    <string name="nse">Neo - Assyrian Empire</string>
    <string name="nbe">Neo - Babylonian Empire</string>
    <string name="sp">Sea peoples</string>
    <string name="bd">Persian Domination</string>
    <string name="me">Macedonian Empire</string>
    <string name="se">Seleucid Empire</string>
    <string name="word_info">Word info</string>
    <string name="please_wait">Please wait..</string>
    <string name="dict_tip">Use c for š and j for ĝ</string>
    <string name="converter_tip">This tool will convert words or sounds written as letters from Latin form into Sumerian cuneiform.\nIf you want to combine words insert . or - among\You can use c for š and j for ĝ</string>
    <string name="proverb_tip">In here you dive with the amazing sumerian proverbs\nClick next for a random proverb\n all proverbs provided from http://etcsl.orinst.ox.ac.uk</string>
    <string name="title_activity_settings">Settings</string>
    <string name="app_language">App language</string>
    <string name="cuneiform_font">Cuneiform font</string>
    <string name="more">References and more</string>
    <string name="font_1">Ur III</string>
    <string name="font_2">Old Babylonian - cursive script</string>
    <string name="font_3">Old Babylonian - Hammurabi</string>
    <string name="font_4">Hittite</string>
    <string name="font_5">Neo-Assyrian</string>
    <string name="font_6">Ur III - Noto Sans by google</string>

    <string name="ruler">Ruler:</string>
    <string name="epithet">Epithet:</string>
    <string name="reign_length">Reign length:</string>
    <string name="approx_dates">Approx dates:</string>
    <string name="more_info">More info:</string>

    <string name="starts_with">Pick the sign you see in your code.</string>
    <!-- myths -->
    <string name="mythologies">Mythologies</string>
    <string name="type">Type:</string>
    <string name="references">References</string>
    <string name="time_periods_attested">Time Periods Attested:</string>
    <string name="name_and_spellings">Name and Spellings:</string>
    <string name="functions">Functions:</string>
    <string name="divine_genealogy">Divine genealogy:</string>
    <string name="cult_place">Cult/Place:</string>
    <string name="myth_info">Info:</string>
    <!-- cities -->
    <string name="cities">Cities</string>
    <string name="alternate_name">Alternate name:</string>
    <string name="prominence">Prominence:</string>
    <string name="location">Location:</string>
    <string name="coordinates">Coordinates:</string>
    <string name="founded">Founded:</string>
    <string name="abandoned">Abandoned:</string>
    <string name="city_info">Info:</string>
    <string name="area">Area:</string>
    <string name="excavation_dates">Excavation dates:</string>
    <string name="architecture">Architecture:</string>
    <string name="archaeologists">Archaeologists:</string>
    <string name="archaeology">Archaeology:</string>
    <string name="research">Research:</string>
    <string name="environment">Environment:</string>
    <string name="occupation">Occupation:</string>
    <string name="part_of">Part of:</string>
    <string name="criteria">Criteria:</string>
    <string name="inscription">Inscription:</string>
    <string name="buffer_zone">Buffer zone:</string>
    <string name="history">History:</string>
    <string name="references_and_about">References and About</string>


</resources>
