<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:fillViewport="true"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".ui.MythViewer"
android:background="#ffff">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- BAR -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#ffffff" >

        <TextView
            android:id="@+id/title2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/mythologies"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/primary" />

        <RelativeLayout
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/back"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/primary" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/info"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:padding="5dp"
            android:layout_alignParentRight="true" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/references"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/primary" />

        </RelativeLayout>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@drawable/shadowt">
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="#ffff">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="300dp" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="70dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="30dp"
                android:id="@+id/title"
                android:text="dddd"
                android:textColor="@color/black"/>
        </RelativeLayout>


        <!-- type -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="20dp"
                android:id="@+id/type"
                android:text="dddd"
                android:textColor="@color/primarypressed" />
        </RelativeLayout>



        <!-- myth info -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/myth_info"
                android:textSize="20dp"
                android:textColor="@color/primary" />

            <TextView
                android:id="@+id/myth_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="40dp"
                android:text="myth_info"
                android:textSize="20dp"
                android:textColor="@color/black" />
        </LinearLayout>



        <!-- name and Spellings -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/name_and_spellings"
                android:textSize="20dp"
                android:textColor="@color/primary" />

            <TextView
                android:id="@+id/name_and_spellings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="40dp"
                android:text="name_and_spellings"
                android:textSize="20dp"
                android:textColor="@color/black" />
        </LinearLayout>


        <!-- cult place -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/cult_place"
                android:textSize="20dp"
                android:textColor="@color/primary" />

            <TextView
                android:id="@+id/cult_place"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="40dp"
                android:text="cult_place"
                android:textSize="20dp"
                android:textColor="@color/black" />
        </LinearLayout>


        <!-- time Periods Attested -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/time_periods_attested"
                android:textSize="20dp"
                android:textColor="@color/primary" />

            <TextView
                android:id="@+id/time_periods_attested"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="40dp"
                android:text="time_periods_attested"
                android:textSize="20dp"
                android:textColor="@color/black" />
        </LinearLayout>


        <!-- divine genealogy -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/divine_genealogy"
                android:textSize="20dp"
                android:textColor="@color/primary" />

            <TextView
                android:id="@+id/divine_genealogy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="40dp"
                android:text="divine_genealogy"
                android:textSize="20dp"
                android:textColor="@color/black" />
        </LinearLayout>


        <!-- functions -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/functions"
                android:textSize="20dp"
                android:textColor="@color/primary" />

            <TextView
                android:id="@+id/functions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="40dp"
                android:text="functions"
                android:textSize="20dp"
                android:textColor="@color/black" />
        </LinearLayout>



    </LinearLayout>



</LinearLayout>
</ScrollView>